# triton-onnx-demo

./: README.md  build_scikit_learn_model.py  build_xgboost_model.py  load_model.py  pyproject.toml  scikit_learn_client.py
clients/: diabetes_example_client.py  dummy_model_client.py  lightgbm_client.py  xgboost_client.py
failed-models/toy_model/: config.pbtxt
failed-models/toy_model/1/model.savedmodel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
failed-models/toy_model/1/model.savedmodel/assets/: ab865a1a327440a7data_spec.pb  ab865a1a327440a7gradient_boosted_trees_header.pb  ab865a1a327440a7nodes-00000-of-00001
failed-models/triton_xgboost_model/: config.pbtxt
failed-models/triton_xgboost_model/1/: xgboost.json
model_builders/: build_lightgbm_model.py  build_scikit_learn_model.py  build_triton_xgboost_model.py  build_xgboost_model.py
models-non-in-use/dummy_model/: config.pbtxt
models-non-in-use/lightgbm_model/: config.pbtxt
models-non-in-use/lightgbm_model/1/: model.txt
models-non-in-use/onnx_test/: config.pbtxt
models-non-in-use/onnx_test/1/: model.onnx
models/diabetes_example/: config.pbtxt
models/diabetes_example/1/: model.json  model.ubj  xgboost.json
models/diabetes_model/: config.pbtxt
models/diabetes_model/1/: xgboost.json
models/dummy_model/1/model.savedmodel/: saved_model.pb
models/scikit_learn_model/: config.pbtxt
models/scikit_learn_model/1/: model.onnx
models/toy_onnx_model/: config.pbtxt  xgboost.json
models/xgboost_model/: config.pbtxt
models/xgboost_model/1/: model.json  xgboost.json
(+4 files in other folders)
