[tool.poetry]
name = "triton-onnx-demo"
version = "0.1.0"
description = ""
authors = ["Lee Tunnicliffe <lee.tunnicliffe@deliveroo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tf2onnx = "^1.15.1"
tritonclient = { version = ">=2.34,<=2.36" }
gevent = "^23.9.1"
geventhttpclient = "^2.0.11"
tensorflow-decision-forests = "^1.8.1"
scikit-learn = "^1.3.2"
skl2onnx = "^1.15.0"
onnxruntime = "^1.16.3"
xgboost = { version = ">=1.5,<1.6" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
